--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dmstr/yii2-adminlte-asset": "^2.6",
         "mdmsoft/yii2-admin": "~2.0",
         "kartik-v/yii2-export": "dev-master",
-        "kartik-v/yii2-widget-select2": "dev-master"
+        "kartik-v/yii2-widget-select2": "dev-master",
+        "kartik-v/yii2-widget-datepicker": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
