--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "mdmsoft/yii2-admin": "~2.0",
         "kartik-v/yii2-export": "dev-master",
         "kartik-v/yii2-widget-select2": "dev-master",
-        "kartik-v/yii2-widget-datepicker": "dev-master"
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "kartik-v/yii2-widget-depdrop": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
