--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         "wbraganca/yii2-dynamicform": "dev-master",
         "kartik-v/yii2-widget-fileinput": "^1.1",
         "phpmailer/phpmailer": "^6.5",
-        "phpoffice/phpexcel": "dev-develop",
-        "kartik-v/yii2-mpdf": "dev-master"
+        "kartik-v/yii2-mpdf": "dev-master",
+        "phpoffice/phpspreadsheet": "^1.29"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
