--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "kartik-v/yii2-widget-fileinput": "^1.1",
         "phpmailer/phpmailer": "^6.5",
         "kartik-v/yii2-mpdf": "dev-master",
-        "phpoffice/phpspreadsheet": "^1.29"
+        "phpoffice/phpspreadsheet": "^1.29",
+        "dompdf/dompdf": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
